--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -2,6 +2,12 @@ libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=3.0
+libs.javaee-api-7.0.classpath=\
+    ${base}/javaee-api-7.0/javaee-api-7.0.jar
+libs.javaee-api-7.0.displayName=Java EE 7 API Library
+libs.javaee-api-7.0.javadoc=\
+    ${base}/javaee-api-7.0/javaee-doc-api.jar
+libs.javaee-api-7.0.prop-maven-dependencies=javax:javaee-api:7.0:jar
 libs.jsf20.classpath=\
     ${base}/jsf20/javax.faces.jar
 libs.jsf20.displayName=JSF 2.3
