--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,7 +45,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${file.reference.mysql-connector-java-8.0.28.jar}:\
-    ${file.reference.primefaces-11.0.0.jar}
+    ${file.reference.primefaces-11.0.0.jar}:\
+    ${libs.javaee-api-7.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
